--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.5",
+    "@react-navigation/native-stack": "^6.9.11",
     "expo": "~48.0.4",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.11",
     "tailwindcss-react-native": "^1.7.10"
   },
