--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.5",
     "@react-navigation/native-stack": "^6.9.11",
+    "@sanity/client": "^5.2.2",
+    "@sanity/image-url": "^1.0.2",
+    "dotenv": "^16.0.1",
     "expo": "~48.0.4",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
@@ -25,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.8",
     "tailwindcss": "^3.2.7"
   },
   "private": true
