--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.5",
     "@react-navigation/native-stack": "^6.9.11",
+    "@reduxjs/toolkit": "^1.9.3",
     "@sanity/client": "^5.2.2",
     "@sanity/image-url": "^1.0.2",
     "dotenv": "^16.0.1",
@@ -19,11 +20,14 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.3",
+    "react-native-animatable": "^1.3.3",
+    "react-native-progress": "^5.0.0",
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.11",
+    "react-redux": "^8.0.5",
     "tailwindcss-react-native": "^1.7.10"
   },
   "devDependencies": {
