--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.11",
     "react-redux": "^8.0.5",
-    "tailwindcss-react-native": "^1.7.10"
+    "tailwindcss-react-native": "^1.7.10",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
